add docs to device controller
